fix: Disable the login page of Spring Boot and the error stacktrace